# whl-FAST-LIO2

./: CMakeLists.txt  README.md
context/: fast_lio2_algorithm_and_map_flow_review_20260521.md  fast_lio2_apollo_migration_plan.md  fast_lio2_code_structure_review.md  fast_lio2_core_modularization_20260521.md  fast_lio2_dropin_usage.md  fast_lio2_evaluation_and_mapping_playbook.md  fast_lio2_map_infra_architecture.md  fast_lio2_official_algorithm_review.md  fast_lio2_production_readiness_review.md  fast_lio2_refactor_and_scorecard.md  fast_lio2_sensor_rgb_host_validation_20260523.md  fast_lio2_standalone_runtime_review.md  fast_lio2_submission_review_20260521.md  fast_lio2_validation_baseline.md
fast_lio2/common/: types.h
fast_lio2/core/: fast_lio2_core.cc  fast_lio2_core.h  official_pipeline_contract.cc  official_pipeline_contract.h
fast_lio2/evaluation/: scorecard.cc  scorecard.h
fast_lio2/map_infra/: localization_map_contract.h  map_product_contract.cc  map_product_contract.h  optimized_frame_contract.h
fast_lio2/pipeline/: pipeline_contract.h
modules/fast_lio2/: BUILD
modules/fast_lio2/adapter/: corrected_imu_adapter.cc  corrected_imu_adapter.h  pointcloud_view_adapter.cc  pointcloud_view_adapter.h  runtime_data.h
modules/fast_lio2/component/: fast_lio2_component.cc  (+1 more)
tests/: core_contract_smoke.cc  map_product_contract_smoke.cc  official_pipeline_contract_smoke.cc  prepare_apollo_host_run_test.py  scorecard_contract_smoke.cc  scorecard_metrics_sensor_rgb.json  scorecard_metrics_zhongji.json
tools/: evaluate_scorecard.py  prepare_apollo_host_run.py
(+15 files in other folders)
